--- a/4일차/중첩반복문.html
+++ b/4일차/중첩반복문.html
@@ -40,10 +40,17 @@
         //     }
         // }
 
+        // for(let i = 1; i < 10; i++){
+        //     document.write(`<h3>${i}단</h3><br>`)
+        //     for(let n = 1; n < 10; n++){
+        //         document.write(`${i} x ${n} = ${i * n}<br>`)
+        //     }
+        // }
+
         for(let i = 1; i < 10; i++){
-            document.write(`<h3>${i}단</h3><br>`)
-            for(let n = 1; n < 10; n++){
-                document.write(`${i} x ${n} = ${i * n}<br>`)
+            document.write(`<h4> ${i}단 </h4>`)
+            for(let n = 1; n< 10; n++){
+                document.write(`${i} x ${n} = ${i * n} <br>`)
             }
         }
         
