--- a/7일차/dom스크립트.html
+++ b/7일차/dom스크립트.html
@@ -19,7 +19,8 @@
 
         // *Dom script(돔 스크립트)
         // =>Document Object Model의 약자
-        // =>브라우저에 이쁘게 꾸미기 위한 수단 
+        // =>브라우저에 이쁘게 꾸미기 위한 수단
+        // =>앱, 혹은 사이트를 수정, 추가, 삭제, 변형 등 처리할 수 있음 
 
         // *querySelector("선택자명") 
         // =>query 는 요청이라는 뜻
