--- a/10일차/이벤트위임.html
+++ b/10일차/이벤트위임.html
@@ -95,6 +95,9 @@
             }
         }
 
+        // => e(매개변수).target = 마우스 커서가 가리키는 곳
+        // => contains 는 'con'을 포함하고 있다는 뜻
+
         conWrapEl.addEventListener(`click`, handleClick)
 
     </script>
