--- a/11일차/시간관련.html
+++ b/11일차/시간관련.html
@@ -7,11 +7,14 @@
 </head>
 <body>
 
+    <input type="date">
+
 
     <script>
 
         const date = new Date();
         // =>현재 년도 월 일 시 분 초 를 가져옴
+        // =>new Date는 한번에 같이 써야함 세트임!
         
         const year = date.getFullYear();
         const hour = date.getHours();
