--- a/11일차/타이밍함수.html
+++ b/11일차/타이밍함수.html
@@ -10,11 +10,14 @@
     <script>
 
         // *타이밍 함수
-        // 1.setUnterval()
+        // 1.setInterval()
         // =>지정한 시간마다 계속 실행됨
+
         // setInterval(() => {
         //     document.write("1초마다 계속 실행됨");
         // }, 1000);
+
+        // setInterval(실행할 함수, 1000)
 
 
 
@@ -25,6 +28,8 @@
         }
 
         setTimeout(timeout, 3000);
+
+        // setTimeout(실행할 함수, 몇초 뒤 실행할지 시간)
 
     </script>
     
