--- a/14일차/scrollevent.html
+++ b/14일차/scrollevent.html
@@ -43,15 +43,12 @@
 
         const headerEl = document.querySelector('header');
         const secEl_2 = document.querySelector('.section_2');
-        const titleEl = document.querySelector('.title')
+        const titleEl = document.querySelector('.title');
+        const conAll = document.querySelectorAll('.con');
 
         const handleScroll = () => {
             const pageY = pageYOffset;
-            // =>스크롤바의 높이값을 px단위로 알아옴
-            // console.log(pageY)
             const secTop_2 = secEl_2.offsetTop;
-            // console.log(secTop_2);
-            
 
             if(pageY >= 300){
                 headerEl.classList.add('header_active');
@@ -61,16 +58,30 @@
 
             if(pageY >= secTop_2 / 2){
                 titleEl.classList.add('title_active');
+
+                for(let i = 0; i < conAll.length; i++){
+                    const conEl = conAll[i];
+                    const conTop = conEl.offsetTop;
+                    
+                    if(pageY >= conTop - window.innerHeight / 1.5){
+                        setTimeout(() =>{
+                            conEl.classList.add('con_active');
+                        }, i * 200); 
+                    }else{
+                        conEl.classList.remove('con_active');
+                    }
+                }
             }else{
-                titleEl.classList.remove('title_active')
-            };
+                titleEl.classList.remove('title_active');
+
+                for(let i = 0; i < conAll.length; i++){
+                    conAll[i].classList.remove('.con_active');
+                }
+            }
         };
 
         window.addEventListener('scroll', handleScroll);
         // (스크롤을 윈도우꺼임)
-
-
-
 
 
         // const handleScroll = () => {
