--- a/17일차/weather.html
+++ b/17일차/weather.html
@@ -5,8 +5,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <style>
+
+        *{
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        .box{
+            width: 500px;
+            height: 500px;
+            background-color: teal;
+            background: linear-gradient(0deg, rgba(93,199,200,1) 0%, rgba(226,246,58,0.9472163865546218) 100%);
+        }
+
+        .box:before{
+            content: "글자글자";
+            display: block;
+            width: 100%;
+            height: 100px;
+            background-color: purple;
+        }
+
+        .box:after{
+            content: "";
+            display: block;
+            width: 100%;
+            height: 100px;
+            background-color: brown;
+        }
+
+    </style>
+
 </head>
 <body>
+
+    <div class="box"></div>
 
     <div class="wrap">
         <h2>날씨</h2>
