--- a/17일차/weater연습.html
+++ b/17일차/weater연습.html
@@ -22,7 +22,7 @@
     <div class="con con_2">
 
       <div class="info">
-        <div class="temp temp_2">20<span></span>℃</div>
+        <div class="temp temp_2"><span></span>℃</div>
         <div class="city city_2">LA</div>
 
       </div>
@@ -32,7 +32,7 @@
     <div class="con con_3">
 
       <div class="info">
-        <div class="temp temp_3">20<span></span>℃</div>
+        <div class="temp temp_3"><span></span>℃</div>
         <div class="city city_3">Interlaken</div>
 
       </div>
