--- a/16.5일차/localStorage연습_2.html
+++ b/16.5일차/localStorage연습_2.html
@@ -34,6 +34,9 @@
 
   <script>
 
+    // 키값하나에 벨류값하나 세트로
+
+
     const formEl = document.querySelector('form');
     const inputEl = document.querySelector('input');
     const commentBoxEl = document.querySelector('.comment_box');
@@ -42,7 +45,7 @@
     if (commentCount === null) {
       commentCount = 0;
     } else {
-      commentCount = parseInt(commentCount);
+      commentCount = parseInt(commentCount);  
       // 문자열을 숫자로 반환함 good!
     }
 
