--- a/16.5일차/localStorage연습_5.html
+++ b/16.5일차/localStorage연습_5.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=\, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
   <title>Document</title>
 
@@ -107,6 +107,11 @@
     .comment_list{
       padding: 10px;
     }
+
+    .fa-solid.active{
+      color: red;
+    }
+
   
     </style>
 </head>
@@ -130,6 +135,7 @@
       <div class="footer">
         <div class="heart">
           <i class="fa-regular fa-heart"></i>
+          <!-- <i class="fa-solid fa-heart"></i> -->
         </div>
 
         <form>
